2001-12-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c:
	* gda-server-provider.c: s/g_return*_if_fail/bonobo_return*_if_fail

2001-12-19  Cleber Rodrigues <cleberrrjr@bol.com.br>

	* gda-xql-*: ported GDA XML Query stuff to GNOME 2

2001-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset.c (gda_recordset_new): set column titles

	* gda-data-model-array.c (gda_data_model_array_set_n_columns): new
	function

2001-12-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset.c (impl_Recordset_moveFirst): implemented
	(impl_Recordset_moveNext): implemented
	(impl_Recordset_movePrevious): implemented
	(impl_Recordset_moveLast): implemented

2001-12-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset.c (impl_Recordset_describe): implemented
	(impl_Recordset_fetch): implemented

2001-12-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-row.[ch] (gda_row_get_field): new function

	* gda-server-recordset.[ch] (impl_Recordset_getRowCount): new
	CORBA method added

2001-12-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-field.[ch]: removed, moved all functions to gda-row

	* gda-server-recordset.c (gda_server_recordset_get_connection): new
	function

	* gda-row.c (gda_row_attributes_new): new function
	(gda_row_attributes_get_field): new function
	(gda_field_attributes_get_defined_size): new function
	(gda_field_attributes_set_defined_size): new function
	(gda_field_attributes_get_name): new function
	(gda_field_attributes_set_name): new function
	(gda_field_attributes_get_scale): new function
	(gda_field_attributes_set_scale): new function
	(gda_field_attributes_get_gdatype): new function
	(gda_field_attributes_set_gdatype): new function
	(gda_field_*): moved from gda-field.[ch]

2001-12-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-parameter.c (gda_parameter_list_to_corba): new function

	* gda-server-connection.c (gda_server_connection_notify_action):
	don't build the CORBA sequence by hand, but use the new