@@ -1,3 +1,8 @@
+2001-12-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
+
+	* gda-connection.c: if 'id' is NULL in begin, commit or rollback
+	then replace it with a "". This avoids core dump in gda-test.c.
+
 2001-12-20  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-server-connection.c:
